# sorth

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  Makefile  README.md  associate.bat  build  install.bat  ls.bat  package  simple_repl.f  sorth.cpp  sorth_lsp  sorth_lsp.bat  std.f  std.sorth  test.f  test.sorth  tests.f  vcpkg-configuration.json  vcpkg.json
.github/workflows/: c-cpp.yml
sample_module/: build  build.bat  module.f  sample_module.c  sample_module.cpp
src/: array.cpp  array.h  blocking_value_queue.cpp  blocking_value_queue.h  blocking_value_stack.cpp  blocking_value_stack.h  builtin_words.cpp  byte_buffer.cpp  byte_buffer.h  code_constructor.cpp  code_constructor.h  contextual_list.h  data_object.cpp  data_object.h  dictionary.cpp  dictionary.h  error.cpp  error.h  hash_table.cpp  hash_table.h  interpreter.cpp  interpreter.h  jit.cpp  jit.h  location.cpp  location.h  operation_code.cpp  operation_code.h  posix_io_words.cpp  posix_io_words.h  sorth.cpp  sorth.h  sorth.rc  sorth_ext.cpp  sorth_ext.h  sorth_ext_internal.h  sorth_ffi.cpp  sorth_ffi.h  source_buffer.cpp  source_buffer.h  (+11 more)
src/lang/code/: code_constructor.cpp  compile-context.cpp  compile-context.h  instruction.cpp  instruction.h  jit.cpp  jit.h
src/lang/source/: location.cpp  location.h  source_buffer.cpp  source_buffer.h  tokenize.cpp  tokenize.h
src/run-time/built-ins/: ffi-words.cpp  ffi-words.h  io-words-posix.cpp  io-words-posix.h  io-words-windows.cpp  io-words-windows.h  posix_io_words.cpp  posix_io_words.h  sorth_ffi.cpp  sorth_ffi.h  terminal-words.cpp  terminal-words.h  terminal_words.cpp  user-words.cpp  user-words.h  user_words.cpp  win_io_words.cpp  win_io_words.h  word_function.cpp  word_function.h
src/run-time/built-ins/core-words/: array-words.cpp  array-words.h  builtin_words.cpp  byte-buffer-words.cpp  byte-buffer-words.h  byte-code-words.cpp  byte-code-words.h  core-words.cpp  core-words.h  hash-table-words.cpp  hash-table-words.h  interpreter-words.cpp  interpreter-words.h  math-logic-words.cpp  math-logic-words.h  stack-words.cpp  stack-words.h  string-words.cpp  string-words.h  structure-words.cpp  structure-words.h  token-words.cpp  token-words.h  value-type-words.cpp  value-type-words.h  word-creation-words.cpp  word-creation-words.h  word-info-struct.cpp  word-info-struct.h  word-words.cpp  word-words.h
src/run-time/data-structures/: array.cpp  array.h  byte_buffer.cpp  byte_buffer.h  contextual-list.h  data-object.cpp  data-object.h  data_object.cpp  data_object.h  dictionary.cpp  dictionary.h  hash-table.h  hash_table.cpp  hash_table.h  value.cpp  value.h  word-function.cpp  word-function.h
src/run-time/interpreter/: interpreter.cpp  interpreter.h
std/: ffi.f  json.f  repl.f  simple-repl.f  simple_repl.f  term.f  user.f  win_user.f
strange-forth/: CHANGELOG.md  README.md  language-configuration.json  package-lock.json  package.json  sorth_lsp  sorth_lsp.bat
strange-forth/server/: document_store.f  jsonrpc.f  language_server.f  lsp.f  symbol_table.f  tokenizer.f
strange-forth/src/: extension.ts
strange-forth/syntaxes/: strangeforth.tmLanguage.json
tests/: 00_test_words.f  01_test_loops.f  02_test_structs.f  03_test_case.f  04_test_buffers.f  05_test_strings.f  06_test_arrays.f  07_test_exception.f  08_test_hashes.f  09_test_ffi.f  test_ffi_lib.cpp
